--- a/api/package.json
+++ b/api/package.json
@@ -11,6 +11,7 @@
     "ts-node": "^10.7.0"
   },
   "scripts": {
-    "dev": "nodemon src/index.ts"
+    "start": "nodemon src/index.ts",
+    "dev": "yarn start"
   }
 }
