--- a/api/package.json
+++ b/api/package.json
@@ -8,10 +8,14 @@
     "apollo-server": "^3.7.0",
     "graphql": "^16.4.0",
     "nodemon": "^2.0.16",
+    "prisma": "^3.13.0",
     "ts-node": "^10.7.0"
   },
   "scripts": {
     "start": "nodemon src/index.ts",
     "dev": "yarn start"
+  },
+  "devDependencies": {
+    "@prisma/client": "^3.13.0"
   }
 }
