--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "apollo-server": "^3.7.0",
+    "apollo-server-core": "^3.7.0",
+    "apollo-server-express": "^3.7.0",
+    "express": "^4.18.1",
     "graphql": "^16.4.0",
     "nodemon": "^2.0.16",
     "prisma": "^3.13.0",
