--- a/api/package.json
+++ b/api/package.json
@@ -4,20 +4,27 @@
   "description": "Backend de nuestra aplicación con una API en GraphQL",
   "main": "index.js",
   "license": "MIT",
-  "dependencies": {
-    "apollo-server-core": "^3.7.0",
-    "apollo-server-express": "^3.7.0",
-    "express": "^4.18.1",
-    "graphql": "^16.4.0",
-    "nodemon": "^2.0.16",
-    "prisma": "^3.13.0",
-    "ts-node": "^10.7.0"
-  },
   "scripts": {
     "start": "nodemon src/index.ts",
     "dev": "yarn start"
   },
+  "dependencies": {
+    "@prisma/client": "^3.1.1",
+    "apollo-server-core": "^3.3.0",
+    "apollo-server-express": "^3.3.0",
+    "bcrypt": "^5.0.1",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "graphql": "^15.6.1",
+    "jose": "^4.3.7",
+    "nodemon": "^2.0.13",
+    "prompt": "^1.2.0",
+    "ts-node": "^10.2.1"
+  },
   "devDependencies": {
-    "@prisma/client": "^3.13.0"
+    "@types/bcrypt": "^5.0.0",
+    "@types/prompt": "^1.1.1",
+    "prisma": "^3.1.1"
   }
 }
