--- a/api/package.json
+++ b/api/package.json
@@ -6,7 +6,8 @@
   "license": "MIT",
   "scripts": {
     "start": "nodemon src/index.ts",
-    "dev": "yarn start"
+    "dev": "yarn start",
+    "test": "jest src"
   },
   "dependencies": {
     "@prisma/client": "^3.1.1",
@@ -24,7 +25,10 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/jest": "^27.5.0",
     "@types/prompt": "^1.1.1",
-    "prisma": "^3.1.1"
+    "jest": "^28.1.0",
+    "prisma": "^3.1.1",
+    "ts-jest": "^28.0.2"
   }
 }
