--- a/api/package.json
+++ b/api/package.json
@@ -28,6 +28,7 @@
     "@types/jest": "^27.5.0",
     "@types/prompt": "^1.1.1",
     "jest": "^28.1.0",
+    "jest-mock-extended": "^2.0.6",
     "prisma": "^3.1.1",
     "ts-jest": "^28.0.2"
   }
