--- a/api/package.json
+++ b/api/package.json
@@ -27,6 +27,8 @@
     "@types/bcrypt": "^5.0.0",
     "@types/jest": "^27.5.0",
     "@types/prompt": "^1.1.1",
+    "easygraphql-tester": "^6.0.1",
+    "graphql-tag": "^2.12.6",
     "jest": "^28.1.0",
     "jest-mock-extended": "^2.0.6",
     "prisma": "^3.1.1",
