--- a/api/package.json
+++ b/api/package.json
@@ -24,9 +24,11 @@
     "graphql": "^15.6.1",
     "jose": "^4.3.7",
     "nodemon": "^2.0.13",
+    "prettier": "^2.4.1",
     "prompt": "^1.2.0",
     "rimraf": "^3.0.2",
-    "ts-node": "^10.2.1"
+    "ts-node": "^10.2.1",
+    "typescript": "4.4.x"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
