--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "extends": "../tsconfig.base.json",
   "compilerOptions": {
+    "lib": ["ES2020"],
+    "target": "ES2020",
     "outDir": "../dist",
     "module": "commonjs",
     "types": ["node", "jest"]
